--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ img{
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
-    height: 950px;
-    width: 2000px;
+    /* height: 950px;
+    width: 2000px; */
 }
 
 .main{
@@ -42,6 +42,12 @@ img{
 }
 
 .main div:hover{
+    scale: 1.1;
+    background-color: rgba(0, 0, 0, 0.28);
+    box-shadow: 0 0 10px yellow;
+}
+
+.keydown{
     scale: 1.1;
     background-color: rgba(0, 0, 0, 0.28);
     box-shadow: 0 0 10px yellow;
